objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>HealthCloudGA__CareGap</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Healthcare</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>vlocity_ins__Vlocity Support Process</fullName>
        <description>Vlocity Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Fulfillment_Due_Date__c</fullName>
        <description>Due Date to fulfill request</description>
        <label>Fulfillment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Name__c</fullName>
        <description>Name of the Fulfillment Document</description>
        <label>Fulfillment Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Quantity__c</fullName>
        <description>Quantity of the Fulfillment Items</description>
        <label>Fulfillment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Type__c</fullName>
        <description>List of Fulfillment Types</description>
        <label>Fulfillment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formulary</fullName>
                </value>
                <value>
                    <fullName>Guide to Benefit</fullName>
                </value>
                <value>
                    <fullName>Provider Directory</fullName>
                </value>
                <value>
                    <fullName>Summary of Benefits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DueDate__c</fullName>
        <description>Date by when this care gap should be closed.</description>
        <inlineHelpText>Date by when this care gap should be closed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FinancialValue__c</fullName>
        <description>Potential savings by closing this care gap.</description>
        <inlineHelpText>Potential savings by closing this care gap.</inlineHelpText>
        <label>Financial Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <description>Rank by which this care gap is sorted.</description>
        <inlineHelpText>Rank by which this care gap is sorted.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureID__c</fullName>
        <description>ID of the source agency&apos;s measure for this care gap.</description>
        <inlineHelpText>ID of the source agency&apos;s measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureVersion__c</fullName>
        <description>Version of the source agency&apos;s ID measure for this care gap.</description>
        <inlineHelpText>Version of the source agency&apos;s ID measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgency__c</fullName>
        <description>Agency that identified the care gap.</description>
        <inlineHelpText>Agency that identified the care gap.</inlineHelpText>
        <label>Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID in the source system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID in the source system.</inlineHelpText>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated.</description>
        <inlineHelpText>When last updated.</inlineHelpText>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Name of the system where this care gap was identified.</description>
        <inlineHelpText>Name of the system where this care gap was identified.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Policy Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>vlocity_ins__BillingAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FinancialAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>vlocity_ins__FinancialAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous activity.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IndicatorImageName__c</fullName>
        <description>Formula: Calculated &quot;indicator&quot; image name based on the priority and status of this Case. Used to display an indicator image on this case when shown in the user interface.</description>
        <formula>IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;highpriorityopen&apos;, (IF(TEXT(Priority)==&apos;High&apos; &amp;&amp; TEXT(Status)==&apos;Closed&apos;, &apos;highpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status)!= &apos;Closed&apos;, &apos;mediumpriorityopen&apos;, (IF(TEXT(Priority)==&apos;Medium&apos; &amp;&amp; TEXT(Status) == &apos;Closed&apos;, &apos;mediumpriorityclose&apos;, (IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status)!=&apos;Closed&apos;, &apos;lowpriorityopen&apos;, IF(TEXT(Priority)==&apos;Low&apos; &amp;&amp; TEXT(Status) ==&apos;Closed&apos;, &apos;lowpriorityclose&apos;,&apos;&apos; ))) )))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicator Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuranceClaimId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InteractionNotes__c</fullName>
        <label>Interaction Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Policy Relationship</label>
        <referenceTo>vlocity_ins__PolicyPartyRelationship__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriorityImageName__c</fullName>
        <description>Formula: Calculated &quot;priority&quot; image name based on the priority of this Case. Used to display a priority image on this case when shown in the user interface.</description>
        <formula>TEXT(Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statement</label>
        <referenceTo>vlocity_ins__Statement__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatusImageName__c</fullName>
        <description>Formula: Calculated &quot;status&quot; image name based on the status of this Case. Used to display a status image on this case when shown in the user interface.</description>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VerificationTimestamp__c</fullName>
        <label>Verification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VerifiedAgentName__c</fullName>
        <label>Verified Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>Fulfillment</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>Allows user to request document to be sent to the Customer</description>
        <label>Fulfillment</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CareGap</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__CareGap</businessProcess>
        <description>Defines a care gap for an individual</description>
        <label>CareGap</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__CarePlan</fullName>
        <active>true</active>
        <businessProcess>HealthCloudGA__Healthcare</businessProcess>
        <description>Defines a care plan for an individual and their care team</description>
        <label>CarePlan</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__MobilePhoneCase</fullName>
        <active>true</active>
        <businessProcess>vlocity_ins__Vlocity Support Process</businessProcess>
        <description>Mobile Phone Case</description>
        <label>MobilePhoneCase</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>